fixed spacing on share buttons

--- a/css/share_img.css
+++ b/css/share_img.css
@@ -44,6 +44,11 @@
 		margin-bottom: 25px;
 	}
 
+	#st-1 .st-btn {
+		margin-left: 20px;
+		margin-right :20px;
+	}
+
 
 
 
